objects/GTContact_Delta__c.object
<CustomObject>
    <description>This is used for the G&amp;T - Contact Delta</description>
    <fields>
        <fullName>Account_OMX_Primary_Key__c</fullName>
        <description>This is the Account OMX_Primary_Key to which the Contact has to be linked to</description>
        <label>Account_OMX_Primary_Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactStatus__c</fullName>
        <description>This is the Contact Status</description>
        <label>ContactStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_OMX_primary_key__c</fullName>
        <description>This is the HFA Id of the contact</description>
        <label>Contact_OMX_primary_key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Source__c</fullName>
        <label>Contact Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Permission_Flag_c__c</fullName>
        <label>Email_Permission_Flag__c</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Order_Date_Of_Contact__c</fullName>
        <label>Last Order Date Of Contact</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_CreatedDate__c</fullName>
        <label>Legacy CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_LastModifiedDate__c</fullName>
        <label>Legacy LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <label>MailingCity</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCountry__c</fullName>
        <label>MailingCountry</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingPostalCode__c</fullName>
        <label>MailingPostalCode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingState__c</fullName>
        <label>MailingState</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Ext__c</fullName>
        <label>Phone Ext</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Processed_Status__c</fullName>
        <description>This determines the Status of the Record Whether its Processed or not By Default its Open</description>
        <label>Processed Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Process Max</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Contact  Delta Role</description>
        <inlineHelpText>eBilling &amp; Account Payable contacts need to be added to iReceivables.</inlineHelpText>
        <label>Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>eBilling</fullName>
                </value>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>Executive Level</fullName>
                </value>
                <value>
                    <fullName>Super User</fullName>
                </value>
                <value>
                    <fullName>CIO</fullName>
                </value>
                <value>
                    <fullName>IT Director</fullName>
                </value>
                <value>
                    <fullName>IT Decision Maker</fullName>
                </value>
                <value>
                    <fullName>IT Buyer</fullName>
                </value>
                <value>
                    <fullName>IT influencer</fullName>
                </value>
                <value>
                    <fullName>Purchasing Manager</fullName>
                </value>
                <value>
                    <fullName>O/S Order Placer</fullName>
                </value>
                <value>
                    <fullName>Tech Order Placer</fullName>
                </value>
                <value>
                    <fullName>Frn Order Placer</fullName>
                </value>
                <value>
                    <fullName>Product Selector</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Payment/Credit</fullName>
                </value>
                <value>
                    <fullName>Applicant</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Dotcom user</fullName>
                </value>
                <value>
                    <fullName>Receiver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Id__c</fullName>
        <label>SFDC Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SITE_OMX_Primary_Key__c</fullName>
        <label>SITE OMX Primary Key</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GTContact Delta</label>
    <nameField>
        <label>Last  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GTContact Delta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>